# PyTorch-FWD

./: .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yml  LICENSE  README.md  README.rst  bender_sync.sh  booster_sync.sh  compute_kldiv.py  decompress.py  hyperparams.md  infgpu_sync.sh  noxfile.py  paper_plots.ipynb  requirements.txt  setup.cfg  setup.py
.github/workflows/: package.yml  tests.yml
config/: celeba.py  cifar10.py
data/CelebAHQ/: identity_CelebAHQ.txt
docs/: conf.py  fwd.rst  index.rst  requirements.txt
metrics/: ddpm_ddim_scheduler.py
paper_plots/: paper_plots.ipynb
scripts/: celebA_fid_experiment.py  celebA_retrain_inception.py  compute_fid.py  compute_matrices.py  compute_wavelet_matrics.py  ddpm_ddim_scheduler.py  diffuse_mnist.py  fid_run.py  freq_plots.py  sample.py  sample_cifar10.py  sample_diffuse_celebA.py  sample_diffuse_mnist.py  train.py  train_diffuse_celebA.py  train_diffuse_cifar10.py  train_diffuse_mnist.py  visualize_samples.py
scripts/fid/: fid.py  inception.py
scripts/wpkl/: wpkl.py
slurmfiles/: bender_a40_diffuse_mnist.sh  bender_diffuse_mnist.sh  booster_diffuse_mnist.sh  diffuse_mnist.sh  infcluster_diffuse_celebA.sh  infcluster_diffuse_celebA_packet.sh  infcluster_diffuse_mnist.sh  multinode.sh  uninode.sh
src/: __init__.py  dataloader.py  diffusion.py  freq_math.py  fwd.py  improved_UNet.py  klwd.py  networks.py  nn.py  sample.py  sample_ddp.py  sample_util.py  sampler.py  trainer.py  util.py  utils.py
src/Improved_UNet/: UNet.py  utils.py
src/fid/: fid.py  inception.py  utils.py
src/fwd/: __init__.py  (+4 more)
tests/: test_celebA_loader.py  test_fid.py  test_freq.py  test_improved_unet.py  test_inputs.py  test_packet_loss.py  test_power_spectrum.py  test_unet.py  test_wavelet_frechet_distance.py
(+3 files in other folders)
