##########################
# Setup.py Configuration #
##########################
[metadata]
name = torchfwd
version = 0.0.1-dev
description = Compute frecet wavelet distances
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/NeuralHPC/PyTorch-FWD
download_url = https://github.com/NeuralHPC/PyTorch-FWD/releases
project_urls =
    Bug Tracker = https://github.com/NeuralHPC/PyTorch-FWD/issues
    Source Code = https://github.com/NeuralHPC/PyTorch-FWD


keywords =
    Wavelets
    Wavelet Transform
    Fast Wavelet Transform
    PyTorch
    Generative Learning

# Author information
author = Lokesh Veeramacheneni
author_email = lokeshveeramacheneni27@gmail.com
maintainer = Lokesh Veeramacheneni
maintainer_email = lokeshveeramacheneni27@gmail.com

# License information
license = Apache-2.0 license 
license_files = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
install_requires =
    pillow
    matplotlib
    scipy==1.11.1
    numpy
    scikit-learn
    torch
    torchvision
    PyWavelets
    ptwt==0.1.8
    tqdm

python_requires = >=3.9

packages = find:
package_dir =
    = src

[options.packages.find]
where = src

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = google
strictness = short